# shaded-android

./: LICENSE  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/feresr/shaded/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/feresr/shaded/: MainActivity.kt
app/src/main/java/com/feresr/shadedapp/: BitmapUtils.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
shaded/: build.gradle  publish.gradle
shaded/src/main/: AndroidManifest.xml
shaded/src/main/cpp/: CMakeLists.txt  native-lib.cpp
shaded/src/main/cpp/include/: Logger.h
shaded/src/main/cpp/src/: FrameBuffer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
shaded/src/main/java/com/feresr/filters/: Filter.kt  FilterRenderer.kt  MainProgram.kt  Renderer.kt  Utils.kt
shaded/src/main/java/com/feresr/shaded/: BrushRenderer.kt  Filter.kt  FilterRenderer.kt  Layer.kt  MainProgram.kt  PingPongRenderer.kt  Renderer.kt  ScreenRenderer.kt  Shaded.kt  ShadedView.kt  Utils.kt
shaded/src/main/res/raw/: blur.fsh  brightness.fsh  brush.fsh  contrast.fsh  exposure.fsh  fragment.fsh  frame.vsh  geometry.gsh  grain.fsh  highlights_shadows.fsh  hsl.fsh  hue.fsh  inverse.fsh  matrix.vsh  redblue.fsh  saturation.fsh  sharpen.fsh  temperature.fsh  vertex.vsh  vertex_brush.vsh  vertexscreen.vsh  vibrance.fsh  vignette.fsh
shaded/src/test/java/com/feresr/filters/: ExampleUnitTest.kt
shaded/src/test/java/com/feresr/shaded/: ExampleUnitTest.kt
(+32 files in other folders)
